--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,7 @@ section .title::after {
 /* home section styles */
 .home {
     display: flex;
-    background: url("/images/banner.jpg") no-repeat center;
+    background: url("images/banner.jpg") no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
